[gd_scene load_steps=13 format=2]

[ext_resource path="res://fonts/Space_Mono/SpaceMono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/Lobby/BackLabel.gd" type="Script" id=2]
[ext_resource path="res://scenes/Lobby/Lobby.gd" type="Script" id=3]
[ext_resource path="res://scenes/Lobby/ChangeNameBtn.gd" type="Script" id=4]
[ext_resource path="res://scenes/Lobby/StartBtn.gd" type="Script" id=7]
[ext_resource path="res://scenes/Lobby/BattleshipLobbySlots.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Lobby/Battleship1.gd" type="Script" id=9]
[ext_resource path="res://scenes/Lobby/Battleship2.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 19
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends \"res://scripts/label_hover.gd\"


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
    pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

func _on_gui_input(event):
    if event.is_pressed():
        NetworkManager.myPlayerData[\"role\"] = \"gunner\"
        NetworkManager.playerList[get_tree().get_network_unique_id()] = NetworkManager.myPlayerData
        get_tree().get_root().get_node(\"LobbyMenu\").render_player_list()
        print(NetworkManager.playerList)
        rpc(\"update_other_lists\",NetworkManager.playerList)

remote func update_other_lists(updatedList):
    NetworkManager.playerList = updatedList
    get_tree().get_root().get_node(\"LobbyMenu\").render_player_list()
    print(NetworkManager.playerList)
"

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
font_data = ExtResource( 1 )

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="NewName" type="LineEdit" parent="."]
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 0.05
margin_left = 0.503967
margin_bottom = -3.8147e-06
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeNameBtn" type="Label" parent="."]
anchor_left = 0.8
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.1
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Change Name"
align = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunnerRoleBtn" type="Label" parent="."]
visible = false
anchor_left = 0.706
anchor_top = 0.383
anchor_right = 0.787
anchor_bottom = 0.432
margin_left = -1.94403
margin_top = 0.199982
margin_right = 0.111816
margin_bottom = -0.200012
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Gunner"
align = 2
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Label" parent="."]
anchor_left = 0.999
anchor_top = 0.998
anchor_right = 0.999
anchor_bottom = 0.998
margin_left = -87.9761
margin_top = -44.8
margin_right = 0.0239258
margin_bottom = 0.200012
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "Start"
align = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LobbyLabel" type="Label" parent="."]
margin_left = 19.0
margin_top = 23.0
margin_right = 149.0
margin_bottom = 87.0
size_flags_horizontal = 0
custom_fonts/font = SubResource( 3 )
text = "Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -77.0
margin_right = 116.0
margin_bottom = -13.0
mouse_filter = 1
size_flags_horizontal = 8
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "Back"
script = ExtResource( 2 )

[node name="BattleshipSlots1" parent="." instance=ExtResource( 8 )]
anchor_left = 0.225
anchor_top = 0.238
anchor_right = 0.225
anchor_bottom = 0.238
margin_left = -0.400009
margin_top = 0.199997
margin_right = 432.6
margin_bottom = 168.2
script = ExtResource( 9 )

[node name="BattleshipSlots2" parent="." instance=ExtResource( 8 )]
anchor_left = 0.225
anchor_top = 0.5
anchor_right = 0.225
anchor_bottom = 0.5
margin_left = -0.400009
margin_top = 18.0
margin_right = 441.6
margin_bottom = 202.0
script = ExtResource( 10 )

[connection signal="gui_input" from="ChangeNameBtn" to="ChangeNameBtn" method="_on_gui_input"]
[connection signal="mouse_entered" from="ChangeNameBtn" to="ChangeNameBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ChangeNameBtn" to="ChangeNameBtn" method="_on_mouse_exited"]
[connection signal="gui_input" from="GunnerRoleBtn" to="GunnerRoleBtn" method="_on_gui_input"]
[connection signal="mouse_entered" from="GunnerRoleBtn" to="GunnerRoleBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="GunnerRoleBtn" to="GunnerRoleBtn" method="_on_mouse_exited"]
[connection signal="gui_input" from="StartBtn" to="StartBtn" method="_on_gui_input"]
[connection signal="mouse_entered" from="StartBtn" to="StartBtn" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="StartBtn" to="StartBtn" method="_on_mouse_exited"]
[connection signal="gui_input" from="BackLabel" to="BackLabel" method="_on_BackLabel_gui_input"]
[connection signal="mouse_entered" from="BackLabel" to="BackLabel" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="BackLabel" to="BackLabel" method="_on_mouse_exited"]
